# ChangeLog for net-analyzer/nstats
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nstats/ChangeLog,v 1.17 2011/12/13 19:02:17 jer Exp $

*nstats-0.4-r2 (13 Dec 2011)

  13 Dec 2011; Jeroen Roovers <jer@gentoo.org> nstats-0.4-r1.ebuild,
  +nstats-0.4-r2.ebuild, files/nstats-0.4-makefile.patch:
  Fix file collisions of nmon and cmon (bug #364685). Fix quoting issues. Do
  not install COPYING.

  06 Sep 2007; Markus Ullmann <jokey@gentoo.org> -nstats-0.4.ebuild:
  Cleanup

  16 Aug 2006; Jon Hood <squinky86@gentoo.org> nstats-0.4-r1.ebuild:
  Stable on amd64, bug #143909. Thanks postmodern <brodigan@pdx.edu>.

*nstats-0.4-r1 (27 Mar 2006)

  27 Mar 2006; Markus Ullmann <jokey@gentoo.org>
  +files/nstats-0.4-glibc24.patch, +nstats-0.4-r1.ebuild:
  Fixed glibc 2.4 compatibility wrt bug #126743

  15 Feb 2006; Markus Ullmann <jokey@gentoo.org> nstats-0.4.ebuild:
  Removing virtual/libpcap wrt bug #117898

  10 Aug 2005; <dang@gentoo.org> nstats-0.4.ebuild:
  Keyword ~amd64

  19 Jul 2005; David Holm <dholm@gentoo.org> nstats-0.4.ebuild:
  Added to ~ppc.

  17 Apr 2005; Marcelo Goes <vanquirius@gentoo.org>
  -files/nstats-0.3.2-r2-gentoo.diff:
  Removing old patch.

  17 Apr 2005; Marcelo Goes <vanquirius@gentoo.org>
  +files/nstats-0.4-makefile.patch, nstats-0.4.ebuild:
  Patching makefile to install bmon as bmon.nstats. This prevents a file
  collision with net-analyzer/bmon.

  29 Jan 2005; Daniel Black <dragonheart@gentoo.org> nstats-0.4.ebuild:
  changed net-libs/libpcap depend to virtual/libcap

  10 Jul 2004; Eldad Zack <eldad@gentoo.org> +metadata.xml, nstats-0.4.ebuild:
  Tidy, x86 stable

  06 Dec 2002; Rodney Rees <manson@gentoo.org> : changed sparc ~sparc keywords
 
*nstats-0.4 (09 Jul 2002)

  09 Jul 2002; Seemant Kulleen <seemant@gentoo.org> nstats-0.4.ebuild
  files/digest-nstats-0.4 :

  Version bump, thanks to: lb-gentoo@projectdream.org (Lukas Beeler) in bug
  #2662
