@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nstats/nstats-0.4-r2.ebuild,v 1.1 2011/12/13 19:02:17 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nstats/nstats-0.4-r2.ebuild,v 1.2 2012/02/21 14:54:32 ago Exp $
 
 EAPI=4
 
@@ -12,7 +12,7 @@ HOMEPAGE="http://trash.net/~reeler/nstats/"
 
 SLOT="0"
 LICENSE="Artistic"
-KEYWORDS="~amd64 ~ppc ~sparc ~x86"
+KEYWORDS="amd64 ~ppc ~sparc ~x86"
 IUSE=""
 
 DEPEND="net-libs/libpcap"
