@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/nstats
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nstats/ChangeLog,v 1.17 2011/12/13 19:02:17 jer Exp $
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/net-analyzer/nstats/ChangeLog,v 1.18 2012/02/21 14:54:32 ago Exp $
+
+  21 Feb 2012; Agostino Sarubbo <ago@gentoo.org> nstats-0.4-r2.ebuild:
+  Stable for amd64, wrt bug #404813
 
 *nstats-0.4-r2 (13 Dec 2011)
 
